  
  o Added keep argument to popOutput() (suggestion of Liviu Andronic); similar argument added to popCommand().
  
  o Use new-style R icon.
  
  o Binomial and quasibinomial GLMs with logit link now print exponentiated coefficients ("odds" ratios), as do poisson and quasipoisson GLMs with log link (generalizing a suggestion of Jose Ramon Rueda).

Changes to Version 2.2-1

  o New Greek translation (contributed by Vasileios Dimitropoulos, Anastasios Vikatos, and Andreas Vikatos, with help from Chel Hee Lee).

  o Updated translations (with thanks to): Basque (Jose Ramon Rueda), Brazilian Portuguese (Marilia Sa Carvalho, with assistance of Chel Hee Lee), Catalan (Manel Salamero), Chinese (Tsung-wu Ho), simplified Chinese (Shulin Yang), French (Philippe Grosjean), Galician (for Rcmdr 2.1-x, Rafael Rodriguez Gayoso), German (Fritz Leisch), Indonesian (I Made Tirta), Italian (Stefano Calza), Japanese (Takaharu Araki), Korean (Jong-Hwa Shin), Polish (Lukasz Daniel), Romanian (Adrian Dusa), Slovenian (Matjaz Jeran), Spanish (Manuel Munoz Marquez).
  
  o Modified modelFormula() utility to permit polynomial and splines in one-sided formulas. Used this in Breusch-Pagan test dialog.
  
  O Tweaks.

Changes to Version 2.2-0

  o New RMarkdown document, usable when pandoc (and possibly LaTeX) are installed; can be compiled to HTML, PDF, or Word file.

  o New "Tools > Install auxiliary software" menu for installing pandoc and LaTeX.

  o Added concentration ellipses to scatterplot and scatterplot-matrix dialogs (suggestion of Kosar Karimi Pour).

  o Changed defaults for scatterplot, scatterplot matrix, 3D scatterplot, to simplify default plots.

  o Bar plots can now be done by groups.

  o Added dot plot dialog.
  
  o Excel files now read on all platforms with readxl package (via RcmdrMisc).
  
  o Package imports conform to new CRAN requirements.
  
  o Updated translations (with thanks to): French (Philippe Grosjean); Russian (Alexey Shipunov).
  