@@ -9,6 +9,8 @@ Changes to Version 2.2-2
   o Use new-style R icon.
   
   o Binomial and quasibinomial GLMs with logit link now print exponentiated coefficients ("odds" ratios), as do poisson and quasipoisson GLMs with log link (generalizing a suggestion of Jose Ramon Rueda).
+  
+  o Names of R objects to be created are no longer translated (e.g., "Dataset", "NormalSamples") into other languages to avoid potential problems (issue reported by Tsung-wu Ho).
 
 Changes to Version 2.2-1
 
